[project]
name = "bilibili-livestream-reminder"
version = "0.1.0"
description = "A Bilibili livestream reminder bot using Telegram API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "blivedm",
    "brotli",
    "pyyaml",
    "requests",
    "typer",
    "yarl",
]

[tool.uv.workspace]
members = [
    "blivedm",
]

[tool.uv.sources]
blivedm = { workspace = true }
